# fastapi-demo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  app_sqlalchemy_v1.sqlite3  docker-compose.yml  pyproject.toml  test.http
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  on_merge.yml
app/: config.py  main.py  settings.py
app/celery_tasks/: tasks.py
app/core/: celery.py  db.py  deps.py  exceptions.py  log.py  logging.py  middleware.py  middlewares.py  router.py  sql_admin.py  taskiq.py
app/db/: __init__.py  database.py  init_db.py
app/models/: base.py  base_models.py  celery_task.py  db.py  db_models.py  email.py  email_models.py  health.py  health_models.py  init_db.py  tag.py  tag_composite.py  tag_composite_models.py  tag_models.py  tag_team_link.py  tag_team_link_models.py  task.py  task_model.py  taskiq_task.py  team.py  team_composite.py  team_composite_models.py  team_models.py  user.py  user_composite.py  user_composite_models.py  user_models.py
app/services/: __init__.py  base.py  base_service.py  email.py  email_service.py  tag.py  tag_service.py  task.py  task_service.py  team.py  team_service.py  user.py  user_service.py
app/taskiq_tasks/: tasks.py
app_domain_based/: main.py
app_domain_based/app_common/: deps.py  models.py  schemas.py  services.py
app_domain_based/app_email/: models.py  schemas.py  services.py
app_domain_based/app_health/: routes.py  schemas.py
app_domain_based/app_tag/: deps.py  models.py  routes_v1.py  schemas.py  services.py
app_domain_based/app_task/: deps.py  models.py  routes_v1.py  schemas.py  services.py
app_domain_based/app_team/: deps.py  models.py  routes_v1.py  schemas.py  services.py
app_domain_based/app_user/: deps.py  models.py  routes_v1.py  schemas.py  services.py
app_domain_based/celery_tasks/: tasks.py
app_domain_based/core/: celery.py  db.py  exceptions.py  init_db.py  logging.py  middleware.py  router.py  sql_admin.py  taskiq.py
app_domain_based/model_relationships/: model_relationships.py
app_domain_based/schema_composites/: schema_composites.py
app_domain_based/taskiq_tasks/: tasks.py
app_sqlachemy_v1/: main.py  requirements.txt
app_sqlachemy_v1/core/: db.py
app_sqlachemy_v1/models/: __init__.py  association.py  tag.py  task.py  team.py  user.py
app_sqlachemy_v1/routers/: tag.py  team.py  user.py
app_sqlalchemy_v1/: __init__.py  config.py  main.py  requirements.txt
app_sqlalchemy_v1/core/: db.py  deps.py  exceptions.py
app_sqlalchemy_v1/models/: __init__.py  association.py  base.py  tag.py  team.py  user.py
app_sqlalchemy_v1/routers/: __init__.py  tag.py  task.py  team.py  user.py
app_sqlalchemy_v1/schemas/: team.py  team_compostie.py  user.py  user_composite.py
app_sqlalchemy_v1/services/: __init__.py  base.py  user.py
migrations/: env.py  script.py.mako
migrations/versions/: 2024_03_26_2335-aba78b5a5007_init.py  2024_03_26_2335-aba78b5a5007_init.sql  2024_03_27_0911-08d73fea4454_init.py  2024_03_27_0911-08d73fea4454_init.sql  2024_03_29_1606-e8d0473197d0_uuid_to_shortuuid.py  2024_03_29_1606-e8d0473197d0_uuid_to_shortuuid.sql  4d9c56c5ec2e_init.py  4d9c56c5ec2e_init.sql
requirements/: base.txt  dev.txt  docs.txt
tests/integration/: conftest.py
tests_domain_based/integration/: conftest.py
tools/: celery_task_result_websocket_client.py
tools/db_schema/: sqlacodegen_generate_db.sh
tools/flask2quart_migration/: README.md  _Version_2_flask2quart.py  flask2quart.py
tools/sql_to_erd/: eralchemy2_demo.sh  sqlalchemy_data_model_visualizer  (+2 more)
(+42 files in other folders)
